--- a/templates/index.html
+++ b/templates/index.html
@@ -110,8 +110,8 @@ Warm regards,
       return urlParams.get("itemId");
     }
 
-    const ITEM_ID = getItemIdFromUrl();
-
+    //const ITEM_ID = getItemIdFromUrl();
+    const ITEM_ID = '2053389531';
     document.addEventListener("DOMContentLoaded", () => {
       document.getElementById("item-id-display").innerText = ITEM_ID || "(not found in URL)";
     });
