--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@ Warm regards,
 
   <script>
     const API_URL = "https://api.monday.com/v2";
-    const API_KEY = "YOUR_API_KEY"; // Replace with your Monday API key
+    const API_KEY = "eyJhbGciOiJIUzI1NiJ9.eyJ0aWQiOjUxODE2ODIyNiwiYWFpIjoxMSwidWlkIjo3NjM1NTU1NCwiaWFkIjoiMjAyNS0wNS0yN1QxMTo1MTozOC4wMDBaIiwicGVyIjoibWU6d3JpdGUiLCJhY3RpZCI6Mjk2NTAyMjEsInJnbiI6ImFwc2UyIn0.4x5sOTNa8-gYQ9Fb8Lnv8hh2_XQXVYJkhxlfRlUmt0s"; // Replace with your Monday API key
     const BOARD_ID = 123456789;     // Replace with your board_id
     const ITEM_ID = 2053389531;     // Replace with your item_id
     const COLUMN_ID = "long_text_mktx40xq"; // Replace with your column_id
