--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,10 @@
 <body>
   <div class="email-container">
     <div class="email-header">Generated Email</div>
+    <br/>
+    <div class="subject" id="email-subject">
+      To Email: romil.gupta@appsavio.com
+    </div>
     
     <div class="subject" id="email-subject">
       Subject: Thank you for your feedback!
