--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
     </div>
     
     <div class="email-body" id="email-body" contenteditable="true">
-Hi Tanisha Sharma,
+Hi Romil Gupta,
       
 Thank you for sharing your feedback regarding the bulk ordering process. I sincerely apologize for the inconvenience you experienced; it’s important to us that our customers have a smooth and efficient experience.
 
